--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.6.0",
     "lucide-react": "^0.546.0",
     "re-resizable": "^6.11.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.1.6",
     "react-router-dom": "^7.9.4",
     "zustand": "^5.0.8"
   },
