--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.1.6",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "zustand": "^5.0.8"
   },
